--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -19,6 +19,8 @@
                                     <li><a href="/tailor/addproduct">Add Products</a></li>
                                     <li><a href="">Change Target</a></li>
                                     <li><a href="">Add Deals</a></li>
+                                    <li><a href="/tailor/advertise">Advertise with Us</a></li>
+                                    <li><a href="/tailor/manageads">Manage Ads</a></li>
                                 </ul>
                             </li>
                             <li><a href="/tailor/sales">Sales Chart <i class="fa fa-angle-down"></i></a>
