--- a/views/tailor/advertise.handlebars
+++ b/views/tailor/advertise.handlebars
@@ -1,3 +1,10 @@
+<!--For Bootstrap datepicker-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous">
+    </script>
+<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
 <div class="container">
     <div class="custom-row-2">
         <div class="col-lg-4 col-md-5">
@@ -31,37 +38,42 @@
             </div>
         </div>
         <div class="col-lg-8 col-md-7">
-            <div class="contact-form">
+            <div style="background:rgb(214, 214, 214); padding:10%" class="billing-info-wrap">
                 <div class="contact-title mb-30">
                     <h2>Advertise with us, at only a small fees</h2>
                 </div>
-                <form class="contact-form-style" action="" method="post" enctype=multipart/form-data>
+                <form class="billing-info mb-20" action="/tailor/advertise" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-lg-6">
                             <label for="startdate">Start Date:*</label>
-                            <input type="text" name="startdate" placeholder="Start Date"
-                                value="{{request.form.startdate }}">
+                            <input style="border:solid black 0.5px" id="datepicker" name="startDate"
+                                value="{{request.form.startDate}}" readonly />
                         </div>
                         <div class="col-lg-6">
                             <label for="enddate">End Date:*</label>
-                            <input type="text" name="enddate" placeholder="End Date" value="{{request.form.enddate }}">
+                            <input style="border:solid black 0.5px" id="datepicker1" name="endDate"
+                                value="{{request.form.enddate}}" readonly />
                         </div>
-                        <div class="col-lg-12">
+
+                        <div style="margin-top:30px" class="col-lg-12">
                             <label for="image">Advertisement Image (capped at 16MB):*</label>
-                            <form action="/upload" method="post" enctype="multipart/form-data">
-                                <input type="file" accept="image" placholder="image" name="photo" input type="submit"
-                                    value="{{request.form.image }}">
-                            </form>
+
+                            <input style="border:solid black 0.5px; padding-top:5px" type="file" id="file" name="file"
+                                accept="image" placholder="image" input type="submit" value="{{image}}">
+
                             Recommended image resolution: 1920 x 800 pixels
 
                         </div>
-                        <div class="col-lg-12">
+                        <div style="margin-top:30px" class="col-lg-12">
                             <label for="adtext">Advertisement Text: (capped at 30 characters/optional)</label>
-                            <input type="text" name="adtext" placeholder="adtext" value="{{request.form.adtext }}">
+                            <input style="border:solid black 0.5px" type="text" name="adtext" placeholder="adtext"
+                                value="{{adtext }}">
                             <br>
                         </div>
-                        <div class="col-lg-12">
-                            <button class="submit" type="submit" style="float: right;">Make Payment</button>
+                        <div style="padding-top:10px;" class="col-lg-12">
+                            {{!-- <button onclick="location.href='http://www.example.com'" class="btn btn-outline-danger" method="post" type="submit">
+                                Confirm</button> --}}
+                            <button class="btn btn-outline-danger" method="post" type="submit">Confirm</button></a>
                         </div>
                     </div>
                 </form>
@@ -70,4 +82,15 @@
     </div>
 </div>
 
-<br>
+<script>
+    $('#datepicker').datepicker({
+        format: 'dd/mm/yyyy',
+        value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+    $('#datepicker1').datepicker({
+        format: 'dd/mm/yyyy',
+        value: new Date().toLocaleDateString('EN-SG'),
+        uiLibrary: 'bootstrap4',
+    });
+</script>
