--- a/views/rider/rideroutecheck.handlebars
+++ b/views/rider/rideroutecheck.handlebars
@@ -86,6 +86,9 @@
                         {{#ifCond OrdersDetails.id '==' id }}
                         <h2>Delivery Details: </h2>
                     </div>
+                    <form action="/chatwith/{{User.username}}" method="post">
+                        <button style="border: 0; padding: 0; display: inline; background: none; text-decoration: underline;"><i class="pe-7s-chat"></i>Via Contact Customer</button>
+                    </form>
                     <p>Customer: {{User.username}}</p>
                     <p>Delivery Date: {{User.deliverydate}}</p>
                     <p>Pick Up
