--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -61,63 +61,19 @@
             <div class="col-xl-2 col-lg-2 col-md-6 col-8">
                 <div class="header-right-wrap">
                     <div class="same-style header-search">
+                        {{#if user.username}}
                         <button type="button" onclick="clear_new()" class="search-active"
                             style="border:none; background: none;">
 
                             <i class="fa fa-bell-o" style="font-size:20px"></i>
                             {{!-- New notification --}}
                             <span id="new_noti"
-                                style="position: absolute; top: -9px; right: -5px; background-color: #000; color: #fff; display: inline-block; width: 21px;height: 21px;border-radius: 100%;line-height: 21px;font-size: 12px; text-align: center;">01</span>
+                                style="position: absolute; top: -9px; right: -5px; background-color: #000; color: #fff; display: inline-block; width: 21px;height: 21px;border-radius: 100%;line-height: 21px;font-size: 12px; text-align: center;">{{unreadNoti}}</span>
 
 
                         </button>
-                        <div class="search-content">
-                            <!-- Unread Notifications -->
-                            <div onclick="location.href='/manage_ads';"
-                                style="background: #ebebeb; border-radius: 3px; padding: 5px 10px 5px 12px; border-bottom: 1px solid black; cursor: pointer;">
-
-                                <div style="position: relative; float: right;">
-                                    <a href="/noti/delete/75"><i class="fa fa-times"
-                                            title="Delete this notification"></i></a>
-                                </div>
-                                Your order has been picked up by the rider, and its on your way!
-                                <div style="font-size:10px">
-                                    <i class="fa fa-rss"></i>
-                                    13 May 11:15AM
-                                </div>
-                            </div>
-
-                            <!-- Read Notifications -->
-                            <div onclick="location.href='/manage_ads';"
-                                style="border-radius: 3px; padding: 5px 10px 5px 12px; border-bottom: 1px solid black; cursor: pointer;">
-                                <div style="position: relative; float: right;">
-                                    <a href="/noti/delete/72"><i class="fa fa-times"
-                                            title="Delete this notification"></i></a>
-                                </div>
-                                Your order has been completed by the tailor, we are assigning a rider now.
-                                <div style="font-size:10px">
-                                    <i class="fa fa-rss"></i>
-                                    13 May 11:13AM
-                                </div>
-                            </div>
-
-                            <!-- Rubbish data -->
-                            <div onclick="location.href='/my_orders';"
-                                style="border-radius: 3px; padding: 5px 10px 5px 12px; border-bottom: 1px solid black; cursor: pointer;">
-                                <div style="position: relative; float: right;">
-                                    <a href="/noti/delete/71"><i class="fa fa-times"
-                                            title="Delete this notification"></i></a>
-                                </div>
-                                Your payment of $210.0 has been received, and your order will be processed.
-                                <div style="font-size:10px">
-                                    <i class="fa fa-rss"></i>
-                                    10 May 03:05PM
-                                </div>
-                            </div>
-                            <!-- end of rubbish -->
-
-                            <center><a href="/notification">See All</a></center>
-                        </div>
+                        {{>_notifications}}
+                        {{/if}}
                     </div>
                     <div class="same-style account-satting">
                         <a class="account-satting-active" href="#">{{#ifCond user.photo '==' null}}<i
@@ -165,18 +121,23 @@
         </div>
     </div>
 
-    {{!--
     <script>
         var action = 0;
 
         function clear_new() {
-            if (action == 1) {
+            if ( action == 1 ) {
                 action = 2;
-                location.href = "{{ url_for('update_notification', action="readall", id=0) }}";
+                var elms = document.querySelectorAll("[id='notification-unread']");
+                for(var i = 0; i < elms.length; i++) {
+                    elms[i].style.background = "#FFFFFF";
+                }
+                document.getElementById("new_noti").innerText = '0';
             } else {
                 action = 1;
-                document.getElementById("new_noti").style.display = 'none';
+                io.emit("markAsRead_noti", "{{user.username}}");
             }
         }
-    </script> --}}
+        
+        
+    </script>
 </header>
